@@ -681,7 +681,8 @@ function onGameInit()
   Explosives = 0
   MapGen = mgDrawn
   Theme = "City"
-  SuddenDeathTurns = 25
+  WaterRise = 0
+  HealthDecrease = 0
 
   for i = 1, #map do
      ParseCommand('draw ' .. map[i])
